css fix for the title spacing

--- a/assets/sass/tonight/03_organism/_o-header-tonight.scss
+++ b/assets/sass/tonight/03_organism/_o-header-tonight.scss
@@ -1,5 +1,5 @@
 .o-header-tonight {
-    margin-bottom: $standard-block-margin;
+    margin-bottom: 0;
     
     .o-wrapper.o-wrapper-site-navigation {
         background-image: url('/wp-content/themes/minnpost-largo/assets/img/events/tonight/minnpost-tonight-skyline.png');
